Fixing unwanted scrollbars on Windows Chrome

--- a/app/assets/stylesheets/components/_data-table.scss
+++ b/app/assets/stylesheets/components/_data-table.scss
@@ -12,7 +12,8 @@ $data-table-cell-padding-horizontal: 10px;
         overflow: auto;
         padding: $data-table-cell-padding-vertical $data-table-cell-padding-horizontal;
 
-        &.truncated-line {
+        &.truncated-line,
+        &.nowrap {
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
